[package]
name = "post"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["std", "color", "help", "usage", "error-context", "suggestions", "derive", "env"] }
lettre = { version = "0.11", default-features = false, features = ["tokio1", "smtp-transport", "pool", "hostname", "builder"] }
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "net", "fs", "signal"] }
tracing = { version = "0.1", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "ansi"] }
axum = { version = "0.7", features = ["tokio", "http1", "json"] }
tower-http = { version = "0.5", features = ["trace"] }
tera = { version = "1.20", default-features = false }
serde = { version = "1.0", features = ["derive"] }
anyhow = { version = "1.0", features = ["std"] }
